Shift getAll methods to utilize the reactor library to to be able to make IO operations to the CF instance asynchronous