@@ -11,7 +11,10 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.mock;
 
 import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 
+import cloud.foundry.cli.crosscutting.beans.SpaceDevelopersBean;
 import cloud.foundry.cli.crosscutting.exceptions.CreationException;
 import cloud.foundry.cli.crosscutting.util.YamlCreator;
 
@@ -20,6 +23,7 @@ import org.cloudfoundry.client.v2.spaces.AssociateSpaceDeveloperByUsernameReques
 import org.cloudfoundry.client.v2.spaces.AssociateSpaceDeveloperByUsernameResponse;
 import org.cloudfoundry.client.v2.spaces.Spaces;
 import org.cloudfoundry.operations.DefaultCloudFoundryOperations;
+import org.cloudfoundry.operations.useradmin.ListSpaceUsersRequest;
 import org.cloudfoundry.operations.useradmin.SpaceUsers;
 import org.cloudfoundry.operations.useradmin.UserAdmin;
 import org.junit.jupiter.api.BeforeAll;
@@ -40,22 +44,26 @@ class SpaceDevelopersOperationsTest {
     @Test
     public void testGetSpaceDevelopers() {
         // given
-        SpaceUsers spaceUsersMock = mockSpaceUsers(cfOperationsMock);
-        when(spaceUsersMock.getDevelopers()).thenReturn(Arrays.asList("one", "two", "three"));
+        List<String> withDevelopers = List.of("one", "two", "three");
+        mockGetAllMethod(withDevelopers);
+
         // when
-        String spaceDevelopers = YamlCreator.createDefaultYamlProcessor().dump(spaceDevelopersOperations.getAll());
+        SpaceDevelopersBean spaceDevelopersBean = spaceDevelopersOperations.getAll().block();
+
         // then
+        String spaceDevelopers = YamlCreator.createDefaultYamlProcessor().dump(spaceDevelopersBean);
         assertThat(spaceDevelopers, is("spaceDevelopers:\n- one\n- two\n- three\n"));
     }
 
     @Test
     public void testGetSpaceDevelopers_WithEmptyList() {
         // given
-        SpaceUsers spaceUsersMock = mockSpaceUsers(cfOperationsMock);
-        when(spaceUsersMock.getDevelopers()).thenReturn(emptyList());
+        List<String> withoutDevelopers = Collections.emptyList();
+        mockGetAllMethod(withoutDevelopers);
         // when
-        String spaceDevelopers = YamlCreator.createDefaultYamlProcessor().dump(spaceDevelopersOperations.getAll());
+        SpaceDevelopersBean spaceDevelopersBean = spaceDevelopersOperations.getAll().block();
         // then
+        String spaceDevelopers = YamlCreator.createDefaultYamlProcessor().dump(spaceDevelopersBean);
         assertThat(spaceDevelopers, is("spaceDevelopers: [\n  ]\n"));
     }
 
@@ -82,9 +90,9 @@ class SpaceDevelopersOperationsTest {
         when(cfClientMock.spaces()).thenReturn(spacesMock);
         Mono<AssociateSpaceDeveloperByUsernameResponse> monoMock = mock(Mono.class);
         when(spacesMock.associateDeveloperByUsername(any()))
-            .thenReturn(monoMock);
+                .thenReturn(monoMock);
         AssociateSpaceDeveloperByUsernameResponse associateSpaceDeveloperByUsernameReponsetMock = mock(
-            AssociateSpaceDeveloperByUsernameResponse.class);
+                AssociateSpaceDeveloperByUsernameResponse.class);
         when(monoMock.block()).thenReturn(associateSpaceDeveloperByUsernameReponsetMock);
         // call
         spaceDevelopersOperations.assignSpaceDeveloper("six");
@@ -119,7 +127,7 @@ class SpaceDevelopersOperationsTest {
 
     /**
      * Mock the DefaultCloudFoundryOperations
-     * 
+     *
      * @return DefaultCloudFoundryOperations
      */
     private static DefaultCloudFoundryOperations mockDefaultCloudFoundryOperations() {
@@ -132,11 +140,11 @@ class SpaceDevelopersOperationsTest {
 
     /**
      * Mock the SpaceUsers
-     * 
+     *
      * @param cfOperationsMock
      * @return SpaceUsers
      */
-    private static SpaceUsers mockSpaceUsers(DefaultCloudFoundryOperations cfOperationsMock) {
+    private SpaceUsers mockSpaceUsers(DefaultCloudFoundryOperations cfOperationsMock) {
         UserAdmin userAdminMock = mock(UserAdmin.class);
         when(cfOperationsMock.userAdmin()).thenReturn(userAdminMock);
         Mono<SpaceUsers> monoMock = mock(Mono.class);
@@ -144,5 +152,19 @@ class SpaceDevelopersOperationsTest {
         SpaceUsers spaceUsersMock = mock(SpaceUsers.class);
         when(monoMock.block()).thenReturn(spaceUsersMock);
         return spaceUsersMock;
+    }
+
+    private UserAdmin mockGetAllMethod(List<String> developers) {
+        UserAdmin userAdminMock = mock(UserAdmin.class);
+
+        when(cfOperationsMock.userAdmin())
+                .thenReturn(userAdminMock);
+        when(userAdminMock.listSpaceUsers(any(ListSpaceUsersRequest.class)))
+                .thenReturn(Mono.just(SpaceUsers
+                        .builder()
+                        .addAllDevelopers(developers)
+                        .build()));
+
+        return userAdminMock;
     }
 }
